[gd_scene load_steps=15 format=3 uid="uid://b244o38gti0l2"]

[ext_resource type="Script" path="res://UI/scripts/menu.gd" id="1_047pa"]
[ext_resource type="Texture2D" uid="uid://dy5j7xug8xanf" path="res://Textures/main_menu_s.png" id="2_i3mwg"]
[ext_resource type="PackedScene" uid="uid://br4o8j3bbcfll" path="res://UI/components/SettingsMenu.tscn" id="2_loq58"]
[ext_resource type="Texture2D" uid="uid://b7pc5rqmneem" path="res://Textures/arrow_down.png" id="3_6rbgr"]
[ext_resource type="Texture2D" uid="uid://b8aleu22bhuaq" path="res://Textures/lamp.png" id="5_t6l8u"]

[sub_resource type="Animation" id="Animation_6ybov"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_fyg45"]
resource_name = "here"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.7, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6qluq"]
_data = {
"RESET": SubResource("Animation_6ybov"),
"here": SubResource("Animation_fyg45")
}

[sub_resource type="Animation" id="Animation_ol51n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0ainj"]
resource_name = "play"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.36667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(10, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.36667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(156, 15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgx62"]
_data = {
"RESET": SubResource("Animation_ol51n"),
"play": SubResource("Animation_0ainj")
}

[sub_resource type="Animation" id="Animation_ehgru"]
resource_name = "lampjes"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 3.55]
}

[sub_resource type="Animation" id="Animation_ja6d7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3qh5"]
_data = {
"RESET": SubResource("Animation_ja6d7"),
"lampjes": SubResource("Animation_ehgru")
}

[node name="Menu" type="Control" node_paths=PackedStringArray("hierzo")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_047pa")
hierzo = NodePath("HBoxContainer/How to play/Sprite2D2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -158.0
offset_right = 582.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -188.0
offset_right = 335.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i3mwg")
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.849
anchor_right = 0.5
anchor_bottom = 0.907
offset_left = 80.0
offset_top = -0.152039
offset_right = -304.0
offset_bottom = 0.263977
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Play"

[node name="How to play" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "How to play"

[node name="Sprite2D2" type="Sprite2D" parent="HBoxContainer/How to play"]
modulate = Color(1, 1, 1, 0.47451)
position = Vector2(47, -4.48795)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_6rbgr")
offset = Vector2(0, -20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/How to play"]
libraries = {
"": SubResource("AnimationLibrary_6qluq")
}
autoplay = "here"

[node name="Settings" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Settings"

[node name="Hilde Credits" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Credits"

[node name="CreditsContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -6.0
offset_right = -64.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.16619, 1.08138)
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Made by:
- Wofke: programming lead
- Steineman: art and sound
- Troye888: also programming 
- Plenni: did absolutely nothing
- The flu: couldnt pick a better week"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Go Back" type="Button" parent="CreditsContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Go Back"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 15.0
offset_top = 9.0
offset_right = 365.0
offset_bottom = 46.0
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "[center]State of Order
[font_size=10]You are in safe hands"
fit_content = true
autowrap_mode = 0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(320, 180)

[node name="Settings" parent="." instance=ExtResource("2_loq58")]
visible = false
layout_mode = 2
anchors_preset = 0
scale = Vector2(0.9, 0.9)
pivot_offset = Vector2(320, 180)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kgx62")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y3qh5")
}
autoplay = "lampjes"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(293, 13)
color = Color(1, 0, 0, 1)
texture = ExtResource("5_t6l8u")

[connection signal="pressed" from="HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/How to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Hilde Credits" to="." method="_on_hilde_credits_pressed"]
[connection signal="pressed" from="CreditsContainer/VBoxContainer/HBoxContainer/Go Back" to="." method="_on_go_back_pressed"]
[connection signal="closeRequest" from="Settings" to="." method="_on_settings_close_request"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
